--- a/Yarp.Auth.Gateway/appsettings.json
+++ b/Yarp.Auth.Gateway/appsettings.json
@@ -5,5 +5,25 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ReverseProxy": {
+    "Routes": {
+      "apil-route": {
+        "ClusterId": "apil-cluster",
+        "AuthorizationPolicy": "default",
+        "Match": {
+          "Path": "api/{**catch-all}"
+        }
+      }
+    },
+    "Clusters": {
+      "apil-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://api:8080"
+          }
+        }
+      }
+    }
+  }
 }
