add first and second api

--- a/Yarp.Auth.Gateway/appsettings.json
+++ b/Yarp.Auth.Gateway/appsettings.json
@@ -8,12 +8,21 @@
   "AllowedHosts": "*",
   "ReverseProxy": {
     "Routes": {
-      "apil-route": {
-        "ClusterId": "apil-cluster",
-        "AuthorizationPolicy": "default",
+      "api1-route": {
+        "ClusterId": "api1-cluster",
+        "AuthorizationPolicy": "first-api-access",
         "Match": {
-          "Path": "api/{**catch-all}"
-        }
+          "Path": "first-api/{**catch-all}"
+        },
+        "Transform": [ { "PathPattern": "api/{**catch-all}" } ]
+      },
+      "api2-route": {
+        "ClusterId": "api2-cluster",
+        "AuthorizationPolicy": "second-api-access",
+        "Match": {
+          "Path": "second-api/{**catch-all}"
+        },
+        "Transform": [ { "PathPattern": "api/{**catch-all}" } ]
       }
     },
     "Clusters": {
@@ -21,6 +30,15 @@
         "Destinations": {
           "destination1": {
             "Address": "http://api:8080"
+          }
+        }
+      }
+    },
+    "api2-cluster": {
+      "apil-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://api2:8080"
           }
         }
       }
